[package]
name = "tsp_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tsp_solver"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

